--- a/config/database.yml
+++ b/config/database.yml
@@ -50,5 +50,6 @@ test:
 production:
   <<: *default
   database: fleamarket_sample_76d_production
-  username: fleamarket_sample_76d
-  password: <%= ENV['FLEAMARKET_SAMPLE_76D_DATABASE_PASSWORD'] %>
+  username: root
+  password: <%= ENV['DATABASE_PASSWORD'] %>
+  socket: /var/lib/mysql/mysql.sock
